--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,8 @@ body {
   text-align: left;
   max-width: 600px;
   padding: 20px;
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0
-  ); /* You can adjust the background opacity here */
-  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);  Optional: add a subtle shadow effect */
+  background-color: rgba(255, 255, 255, 0);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);  shadow effect */
 }
 
 .title {
